--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
           <a id="year" class="button">Jahr</a>
           <a id="agecat" class="button">Alter</a>
           <a id="sex" class="button">Geschlecht</a>
-          <a id="screentime" class="button">Bildschirmzeit</a> 
+          <a id="screentime" class="button">Bildschirmzeit</a>
+			  <a id="Sorgen" class="button">Sorgenbarometer</a>
+		
+			  
           </div>
       </div>
         <div id="vis"></div> <!-- VISUALISIERUNGS-DIV -->
